--- a/typography/smith.html
+++ b/typography/smith.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Lora:700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,11 +11,12 @@
   <body>
   <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 <div class="smith quote-block">
+  <span class="decorative">?</span>
   <div class="quote-wrapper">
     <div class="quote">
       <p>How Can Mirrors Be Real If Our Eyes Aren't Real</p>
     </div>
-    <div class="credit"><p>- Jaden Smith (@officialjaden), Twitter, 2013</p>
+    <div class="credit"><p>- Jaden Smith, Twitter, 2013</p>
     </div>
   </div>
 </div>  <!-- AND ABOVE HERE -->
