Added a link with relevant information.

--- a/typography/smith.html
+++ b/typography/smith.html
@@ -16,7 +16,7 @@
     <div class="quote">
       <p>How Can Mirrors Be Real If Our Eyes Aren't Real</p>
     </div>
-    <div class="credit"><p>- Jaden Smith, Twitter, 2013</p>
+    <div class="credit"><p>- Jaden Smith, Twitter, 2013 (<a href="https://twitter.com/officialjaden/status/329768040235413504?lang=en">Yes, he actually tweeted that.</a>)</p>
     </div>
   </div>
 </div>  <!-- AND ABOVE HERE -->
