--- a/ornette/index.html
+++ b/ornette/index.html
@@ -3,6 +3,8 @@
     <head>
       <meta charset="utf-8">
       <title>Ornette Coleman</title>
+      <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="normalize.css">
       <link rel="stylesheet" href="style.css">
     </head>
