Added slant to headers.

--- a/boxproject/index.html
+++ b/boxproject/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="row">
-            <h2>G1 Performance</h2>
+            <h2><span>G1 Performance</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
                     2-Way SLI&trade; / CrossFire&trade; Graphics Support
@@ -90,7 +90,7 @@
                     High Efficient MOSFET Design
                 </li>
             </ul>
-            <h2>G1 Audio</h2>
+            <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <em>GIGABYTE AMP-UP Audio Technology</em>
             <li>
                 Realtek ALC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier
@@ -113,13 +113,13 @@
             <li>
                 Quad DAC-UP USB Ports
             </li>
-            <h2>G1 Networking</h2>
+            <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
                     <em>Killer E2200 Netwoking Platform</em>
                 </li>
             </ul>
-            <h2>G1 Looks</h2>
+            <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
                     <em>All New Heat Sink Design</em>
@@ -128,7 +128,7 @@
         </div>
         <div class="row">
             <div class="specs">
-                <h2><span>GA-Z97MX-GAMING 5</span> Specifications</h2>
+                <h2><span>GA-Z97MX-GAMING 5 Specifications</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <table>
                     <tr>
                         <td>
