--- a/boxproject/index.html
+++ b/boxproject/index.html
@@ -25,10 +25,9 @@
                   <!-- site navigation -->
                   <nav>
                     <ul class="navigation">
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 1</a></li>
+                      <li><a href="/index.html">Overview</a></li>
+                      <li><a href="/gallery.html">Gallery</a></li>
+                      <li><a href="/closeup.html">Close-Up</a></li>
                     </ul>
                   </nav>
                   <div class="clearfix"></div>
@@ -43,10 +42,11 @@
                             &nbsp;
                         </div>
                     </li>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#perf">Performance</a></li>
+                    <li><a href="#aud">Audio</a></li>
+                    <li><a href="#net">Networking</a></li>
+                    <li><a href="#look">Looks</a></li>
+                    <li><a href="#spec">Specs</a></li>
                   </ul>
               </div>
           </div>
@@ -66,6 +66,7 @@
             </div>
         </div>
         <div class="row">
+            <a id="perf" class="anchor"></a>
             <h2><span>G1 Performance</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
@@ -90,6 +91,7 @@
                     High Efficient MOSFET Design
                 </li>
             </ul>
+                <a id="aud" class="anchor"></a>
             <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <em>GIGABYTE AMP-UP Audio Technology</em>
             <li>
@@ -113,12 +115,15 @@
             <li>
                 Quad DAC-UP USB Ports
             </li>
+                <a id="net" class="anchor"></a>
             <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
                     <em>Killer E2200 Netwoking Platform</em>
                 </li>
             </ul>
+
+                <a id="look" class="anchor"></a>
             <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
@@ -128,6 +133,8 @@
         </div>
         <div class="row">
             <div class="specs">
+
+                    <a id="spec" class="anchor"></a>
                 <h2><span>GA-Z97MX-GAMING 5 Specifications</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <table>
                     <tr>
