--- a/boxproject/index.html
+++ b/boxproject/index.html
@@ -26,7 +26,7 @@
                   <nav>
                     <ul class="navigation">
                       <li><a href="/index.html">Overview</a></li>
-                      <li><a href="/gallery.html">Gallery</a></li>
+                      <li><a href="gallery.html">Gallery</a></li>
                       <li><a href="/closeup.html">Close-Up</a></li>
                     </ul>
                   </nav>
