Added images and closeup.html

--- a/boxproject/index.html
+++ b/boxproject/index.html
@@ -20,14 +20,14 @@
           <div class="menu-wrap">
               <div class="wrap">
                   <header>
-                        <h1>GIGABYTE</h1>
+                        <h1><a href="../boxproject/index.html">GIGABYTE</a></h1>
                   </header>
                   <!-- site navigation -->
                   <nav>
                     <ul class="navigation">
-                      <li><a href="/index.html">Overview</a></li>
-                      <li><a href="gallery.html">Gallery</a></li>
-                      <li><a href="/closeup.html">Close-Up</a></li>
+                      <li><a href="../boxproject/index.html">Overview</a></li>
+                      <li><a href="../boxproject/gallery.html">Gallery</a></li>
+                      <li><a href="../boxproject/closeup.html">Close-Up</a></li>
                     </ul>
                   </nav>
                   <div class="clearfix"></div>
@@ -94,6 +94,7 @@
                 <a id="aud" class="anchor"></a>
             <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <em>GIGABYTE AMP-UP Audio Technology</em>
+            <ul>
             <li>
                 Realtek ALC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier
             </li>
@@ -115,11 +116,12 @@
             <li>
                 Quad DAC-UP USB Ports
             </li>
+        </ul>
                 <a id="net" class="anchor"></a>
             <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
-                    <em>Killer E2200 Netwoking Platform</em>
+                    Killer E2200 Netwoking Platform
                 </li>
             </ul>
 
@@ -127,7 +129,7 @@
             <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <ul>
                 <li>
-                    <em>All New Heat Sink Design</em>
+                    All New Heat Sink Design
                 </li>
             </ul>
         </div>
