Added images to closeup

--- a/boxproject/closeup.html
+++ b/boxproject/closeup.html
@@ -42,10 +42,8 @@
                             &nbsp;
                         </div>
                     </li>
-                    <li><a href="#perf">Performance</a></li>
-                    <li><a href="#aud">Audio</a></li>
-                    <li><a href="#net">Networking</a></li>
-                    <li><a href="#look">Looks</a></li>
+                    <li><a href="#mobo">Motherboard</a></li>
+                    <li><a href="#ioshield">IO Shield</a></li>
                   </ul>
               </div>
           </div>
@@ -58,59 +56,13 @@
     <!-- Main content -->
     <main>
         <div class="row">
-            <a id="perf" class="anchor"></a>
-            <h2><span>G1 Performance</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-            <div class="gallery-row">
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/perf1.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/perf2.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/perf3.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/perf4.png" />
-                </div>
-            </div>
-                <a id="aud" class="anchor"></a>
-            <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-            <div class="gallery-row">
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/audio1.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/audio2.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/audio3.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/audio4.png" />
-                </div>
-                <div class="gallery-blk">
-                    <img src="../boxproject/img/audio5.png" />
-                </div>
-            </div>
-            <div class="column half">
-                <a id="net" class="anchor"></a>
-                <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-                <div class="gallery-row half">
-                    <div class="gallery-blk">
-                        <img src="../boxproject/img/net1.png" />
-                    </div>
-                </div>
-            </div>
-            <div class="column half">
-                <a id="look" class="anchor"></a>
-                <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-                <div class="gallery-row half">
-                    <div class="gallery-blk">
-                        <img src="../boxproject/img/looks1.png" />
-                    </div>
-                </div>
-            </div>
+            <a id="mobo" class="anchor"></a>
+            <h2><span>Motherboard</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
+            <img src="../boxproject/img/mobo.png" />
+            <br />
+            <a id="ioshield" class="anchor"></a>
+            <h2><span>IO Shield</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
+            <img src="../boxproject/img/ioshield.png" />
         </div>
     </main>
 
