Added responsive styling

--- a/boxproject/gallery.html
+++ b/boxproject/gallery.html
@@ -20,13 +20,13 @@
           <div class="menu-wrap">
               <div class="wrap">
                   <header>
-                        <h1><a href="../boxproject/index.html">GIGABYTE</a></h1>
+                        <h1><a href="../boxproject/index.html">GIGABYTE</a>Z97X-<span>GAMING</span> 5</h1>
                   </header>
                   <!-- site navigation -->
                   <nav>
                     <ul class="navigation">
                       <li><a href="../boxproject/index.html">Overview</a></li>
-                      <li><a href="../boxproject/gallery.html">Gallery</a></li>
+                      <li class="active"><a href="../boxproject/gallery.html">Gallery</a></li>
                       <li><a href="../boxproject/closeup.html">Close-Up</a></li>
                     </ul>
                   </nav>
@@ -63,15 +63,19 @@
             <div class="gallery-row">
                 <div class="gallery-blk">
                     <img src="../boxproject/img/perf1.png" />
+                    2-Way Graphics Support
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/perf2.png" />
+                    Long Lifespan Durable Solid Capacitors
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/perf3.png" />
+                    Precise Digital CPU Power Design
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/perf4.png" />
+                    15u Gold Plated CPU Socket
                 </div>
             </div>
                 <a id="aud" class="anchor"></a>
@@ -79,18 +83,23 @@
             <div class="gallery-row">
                 <div class="gallery-blk">
                     <img src="../boxproject/img/audio1.png" />
+                    Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/audio2.png" />
+                    Swapable OP-AMP Technology with Gain Boost
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/audio3.png" />
+                    Audio Noise Guard with Trace Path Lighting
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/audio4.png" />
+                    High-End Audio Capacitors
                 </div>
                 <div class="gallery-blk">
                     <img src="../boxproject/img/audio5.png" />
+                    Quad DAC-UP USB Ports
                 </div>
             </div>
             <div class="column half">
@@ -99,6 +108,7 @@
                 <div class="gallery-row half">
                     <div class="gallery-blk">
                         <img src="../boxproject/img/net1.png" />
+                        Killer E2200 Gaming Networking Platform
                     </div>
                 </div>
             </div>
@@ -108,6 +118,7 @@
                 <div class="gallery-row half">
                     <div class="gallery-blk">
                         <img src="../boxproject/img/looks1.png" />
+                        All New Heat Sink Design
                     </div>
                 </div>
             </div>
