--- a/boxproject/index.html
+++ b/boxproject/index.html
@@ -13,19 +13,18 @@
     <body>
     <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
-
     <!-- the wrap class goes around all of our content
           for full page width backgrounds move the
           wrap inside of each container -->
           <div class="menu-wrap">
               <div class="wrap">
                   <header>
-                        <h1><a href="../boxproject/index.html">GIGABYTE</a></h1>
+                        <h1><a href="../boxproject/index.html">GIGABYTE</a>Z97X-<span>GAMING</span> 5</h1>
                   </header>
                   <!-- site navigation -->
                   <nav>
                     <ul class="navigation">
-                      <li><a href="../boxproject/index.html">Overview</a></li>
+                      <li class="active"><a href="../boxproject/index.html">Overview</a></li>
                       <li><a href="../boxproject/gallery.html">Gallery</a></li>
                       <li><a href="../boxproject/closeup.html">Close-Up</a></li>
                     </ul>
@@ -59,11 +58,6 @@
     <!-- Main content -->
     <main class="content">
         <div class="image-head">
-            <div class="text-div">
-                <div class="z97x">
-                    Z97X-<span>GAMING</span> 5
-                </div>
-            </div>
         </div>
         <div class="row">
             <a id="perf" class="anchor"></a>
@@ -137,7 +131,7 @@
             <div class="specs">
 
                     <a id="spec" class="anchor"></a>
-                <h2><span>GA-Z97MX-GAMING 5 Specifications</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
+                <h2><span>Specifications</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <table>
                     <tr>
                         <td>
