--- a/boxproject/closeup.html
+++ b/boxproject/closeup.html
@@ -20,14 +20,14 @@
           <div class="menu-wrap">
               <div class="wrap">
                   <header>
-                        <h1><a href="../boxproject/index.html">GIGABYTE</a></h1>
+                        <h1><a href="../boxproject/index.html">GIGABYTE</a>Z97X-<span>GAMING</span> 5</h1>
                   </header>
                   <!-- site navigation -->
                   <nav>
                     <ul class="navigation">
                       <li><a href="../boxproject/index.html">Overview</a></li>
                       <li><a href="../boxproject/gallery.html">Gallery</a></li>
-                      <li><a href="../boxproject/closeup.html">Close-Up</a></li>
+                      <li class="active"><a href="../boxproject/closeup.html">Close-Up</a></li>
                     </ul>
                   </nav>
                   <div class="clearfix"></div>
