--- a/boxproject/gallery.html
+++ b/boxproject/gallery.html
@@ -8,6 +8,7 @@
       <!-- Link to CSS files -->
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link href="css/lightbox.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -62,19 +63,19 @@
             <h2><span>G1 Performance</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <div class="gallery-row">
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/perf1.png" />
+                    <a href="../boxproject/img/perf1.png" data-lightbox="perf" data-title="2-Way Graphics Support"><img src="../boxproject/img/perf1.png" /></a>
                     2-Way Graphics Support
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/perf2.png" />
+                    <a href="../boxproject/img/perf2.png" data-lightbox="perf" data-title="Long Lifespan Durable Solid Capacitors"><img src="../boxproject/img/perf2.png" /></a>
                     Long Lifespan Durable Solid Capacitors
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/perf3.png" />
+                    <a href="../boxproject/img/perf3.png" data-lightbox="perf" data-title="Precise Digital CPU Power Design"><img src="../boxproject/img/perf3.png" /></a>
                     Precise Digital CPU Power Design
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/perf4.png" />
+                    <a href="../boxproject/img/perf4.png" data-lightbox="perf" data-title="15u Gold Plated CPU Socket"><img src="../boxproject/img/perf4.png" /></a>
                     15u Gold Plated CPU Socket
                 </div>
             </div>
@@ -82,23 +83,23 @@
             <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <div class="gallery-row">
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/audio1.png" />
+                    <a href="../boxproject/img/audio1.png" data-lightbox="aud" data-title="Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier"><img src="../boxproject/img/audio1.png" /></a>
                     Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/audio2.png" />
+                    <a href="../boxproject/img/audio2.png" data-lightbox="aud" data-title="Swapable OP-AMP Technology with Gain Boost"><img src="../boxproject/img/audio2.png" /></a>
                     Swapable OP-AMP Technology with Gain Boost
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/audio3.png" />
+                    <a href="../boxproject/img/audio3.png" data-lightbox="aud" data-title="Audio Noise Guard with Trace Path Lighting"><img src="../boxproject/img/audio3.png" /></a>
                     Audio Noise Guard with Trace Path Lighting
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/audio4.png" />
+                    <a href="../boxproject/img/audio4.png" data-lightbox="aud" data-title="High-End Audio Capacitors"><img src="../boxproject/img/audio4.png" /></a>
                     High-End Audio Capacitors
                 </div>
                 <div class="gallery-blk">
-                    <img src="../boxproject/img/audio5.png" />
+                    <a href="../boxproject/img/audio5.png" data-lightbox="aud" data-title="Quad DAC-UP USB Ports"><img src="../boxproject/img/audio5.png" /></a>
                     Quad DAC-UP USB Ports
                 </div>
             </div>
@@ -107,7 +108,7 @@
                 <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <div class="gallery-row half">
                     <div class="gallery-blk">
-                        <img src="../boxproject/img/net1.png" />
+                        <a href="../boxproject/img/net1.png" data-lightbox="net" data-title="Killer E2200 Gaming Networking Platform"><img src="../boxproject/img/net1.png" /></a>
                         Killer E2200 Gaming Networking Platform
                     </div>
                 </div>
@@ -117,7 +118,7 @@
                 <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <div class="gallery-row half">
                     <div class="gallery-blk">
-                        <img src="../boxproject/img/looks1.png" />
+                        <a href="../boxproject/img/looks1.png" data-lightbox="look" data-title="All New Heat Sink Design"><img src="../boxproject/img/looks1.png" /></a>
                         All New Heat Sink Design
                     </div>
                 </div>
@@ -137,5 +138,6 @@
     </div> <!-- /.wrap -->
 
     <!-- Don't put anything below here -->
+    <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 </html>
