--- a/boxproject/gallery.html
+++ b/boxproject/gallery.html
@@ -63,19 +63,19 @@
             <h2><span>G1 Performance</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <div class="gallery-row">
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/perf1.png" data-lightbox="perf" data-title="2-Way Graphics Support"><img src="../boxproject/img/perf1.png" /></a>
+                    <a href="../boxproject/img/perf1.png" data-lightbox="perf" data-title="2-Way Graphics Support"><img src="../boxproject/img/sized/perf1.jpg" /></a>
                     2-Way Graphics Support
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/perf2.png" data-lightbox="perf" data-title="Long Lifespan Durable Solid Capacitors"><img src="../boxproject/img/perf2.png" /></a>
+                    <a href="../boxproject/img/perf2.png" data-lightbox="perf" data-title="Long Lifespan Durable Solid Capacitors"><img src="../boxproject/img/sized/perf2.jpg" /></a>
                     Long Lifespan Durable Solid Capacitors
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/perf3.png" data-lightbox="perf" data-title="Precise Digital CPU Power Design"><img src="../boxproject/img/perf3.png" /></a>
+                    <a href="../boxproject/img/perf3.png" data-lightbox="perf" data-title="Precise Digital CPU Power Design"><img src="../boxproject/img/sized/perf3.jpg" /></a>
                     Precise Digital CPU Power Design
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/perf4.png" data-lightbox="perf" data-title="15u Gold Plated CPU Socket"><img src="../boxproject/img/perf4.png" /></a>
+                    <a href="../boxproject/img/perf4.png" data-lightbox="perf" data-title="15u Gold Plated CPU Socket"><img src="../boxproject/img/sized/perf4.jpg" /></a>
                     15u Gold Plated CPU Socket
                 </div>
             </div>
@@ -83,23 +83,23 @@
             <h2><span>G1 Audio</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
             <div class="gallery-row">
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/audio1.png" data-lightbox="aud" data-title="Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier"><img src="../boxproject/img/audio1.png" /></a>
+                    <a href="../boxproject/img/audio1.png" data-lightbox="aud" data-title="Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier"><img src="../boxproject/img/sized/audio1.jpg" /></a>
                     Realtek AAC1150 115dB SNR HD Audio with Built-in Rear Audio Amplifier
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/audio2.png" data-lightbox="aud" data-title="Swapable OP-AMP Technology with Gain Boost"><img src="../boxproject/img/audio2.png" /></a>
+                    <a href="../boxproject/img/audio2.png" data-lightbox="aud" data-title="Swapable OP-AMP Technology with Gain Boost"><img src="../boxproject/img/sized/audio2.jpg" /></a>
                     Swapable OP-AMP Technology with Gain Boost
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/audio3.png" data-lightbox="aud" data-title="Audio Noise Guard with Trace Path Lighting"><img src="../boxproject/img/audio3.png" /></a>
+                    <a href="../boxproject/img/audio3.png" data-lightbox="aud" data-title="Audio Noise Guard with Trace Path Lighting"><img src="../boxproject/img/sized/audio3.jpg" /></a>
                     Audio Noise Guard with Trace Path Lighting
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/audio4.png" data-lightbox="aud" data-title="High-End Audio Capacitors"><img src="../boxproject/img/audio4.png" /></a>
+                    <a href="../boxproject/img/audio4.png" data-lightbox="aud" data-title="High-End Audio Capacitors"><img src="../boxproject/img/sized/audio4.jpg" /></a>
                     High-End Audio Capacitors
                 </div>
                 <div class="gallery-blk">
-                    <a href="../boxproject/img/audio5.png" data-lightbox="aud" data-title="Quad DAC-UP USB Ports"><img src="../boxproject/img/audio5.png" /></a>
+                    <a href="../boxproject/img/audio5.png" data-lightbox="aud" data-title="Quad DAC-UP USB Ports"><img src="../boxproject/img/sized/audio5.jpg" /></a>
                     Quad DAC-UP USB Ports
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <div class="gallery-row half">
                     <div class="gallery-blk">
-                        <a href="../boxproject/img/net1.png" data-lightbox="net" data-title="Killer E2200 Gaming Networking Platform"><img src="../boxproject/img/net1.png" /></a>
+                        <a href="../boxproject/img/net1.png" data-lightbox="net" data-title="Killer E2200 Gaming Networking Platform"><img src="../boxproject/img/sized/net1.jpg" /></a>
                         Killer E2200 Gaming Networking Platform
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                 <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
                 <div class="gallery-row half">
                     <div class="gallery-blk">
-                        <a href="../boxproject/img/looks1.png" data-lightbox="look" data-title="All New Heat Sink Design"><img src="../boxproject/img/looks1.png" /></a>
+                        <a href="../boxproject/img/looks1.png" data-lightbox="look" data-title="All New Heat Sink Design"><img src="../boxproject/img/sized/looks1.jpg" /></a>
                         All New Heat Sink Design
                     </div>
                 </div>
