--- a/js/codeacademy/rock-paper-scissors.html
+++ b/js/codeacademy/rock-paper-scissors.html
@@ -23,16 +23,28 @@
                     <span class="label">Scissor</span>
                 </div>
             </div>
-            <div id="result">
-
-            </div>
-            <div class="scores">
-                <h2>Score</h2>
-                <div class="userScore score-box">
-                    User Score is now: <span id="userScore">0</span>
+            <div class="winnings">
+                <div class="result winBox">
+                    <h2>Results</h2>
+                    <div class="pickContainer">
+                        <span class="pickText">You: </span><span id="userPick"></span>
+                    </div>
+                    <div class="pickContainer">
+                        <span class="pickText">Computer: </span><span id="compPick"></span>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="resultContainer">
+                        <span id="overallResult">Click for a result!</span>
+                    </div>
                 </div>
-                <div class="compScore score-box">
-                    Computer Score is now: <span id="compScore">0</span>
+                <div class="scores winBox">
+                    <h2>Score</h2>
+                    <div class="userScore score-box">
+                        User Score is now: <span id="userScore">0</span>
+                    </div>
+                    <div class="compScore score-box">
+                        Computer Score is now: <span id="compScore">0</span>
+                    </div>
                 </div>
             </div>
             <sub class="center"><a href="https://icons8.com/web-app/tag/rock-paper-scissor">Icons from icons8</a></sub>
