--- a/boxproject/gallery.html
+++ b/boxproject/gallery.html
@@ -20,20 +20,22 @@
           wrap inside of each container -->
           <div class="menu-wrap">
               <div class="wrap">
-                  <header>
-                        <h1><a href="../boxproject/index.html">GIGABYTE</a>Z97X-<span>GAMING</span> 5</h1>
-                  </header>
-                  <!-- site navigation -->
-                  <nav>
-                    <ul class="navigation">
-                      <li><a href="../boxproject/index.html">Overview</a></li>
-                      <li class="active"><a href="../boxproject/gallery.html">Gallery</a></li>
-                      <li><a href="../boxproject/closeup.html">Close-Up</a></li>
-                    </ul>
-                  </nav>
-                  <div class="clearfix"></div>
+                  <div class="wrapper">
+                      <header>
+                            <h1><a href="../boxproject/index.html">GIGABYTE</a>Z97X-<span>GAMING</span> 5</h1>
+                      </header>
+                      <!-- site navigation -->
+                      <nav>
+                        <ul class="navigation">
+                          <li><a href="../boxproject/index.html">Overview</a></li>
+                          <li class="active"><a href="../boxproject/gallery.html">Gallery</a></li>
+                          <li><a href="../boxproject/closeup.html">Close-Up</a></li>
+                        </ul>
+                      </nav>
+                      <div class="clearfix"></div>
+                  </div>
               </div>
-              <div class="secondary">
+              <div class="secondary gallery">
                   <div class="slant">
 
                   </div>
