--- a/typography/lovecraft.html
+++ b/typography/lovecraft.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href='https://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style-lc.css">
     <title>Lovecraft Quote</title> <!-- DON'T FORGET THE TITLE -->
   </head>
   <body>
