Closes #6, spacing of website fixed.

--- a/boxproject/gallery.html
+++ b/boxproject/gallery.html
@@ -105,23 +105,25 @@
                     Quad DAC-UP USB Ports
                 </div>
             </div>
-            <div class="column half">
-                <a id="net" class="anchor"></a>
-                <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-                <div class="gallery-row half">
-                    <div class="gallery-blk">
-                        <a href="../boxproject/img/net1.png" data-lightbox="net" data-title="Killer E2200 Gaming Networking Platform"><img src="../boxproject/img/sized/net1.jpg" /></a>
-                        Killer E2200 Gaming Networking Platform
+            <div class="half-wrap">
+                <div class="column half">
+                    <a id="net" class="anchor"></a>
+                    <h2><span>G1 Networking</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
+                    <div class="gallery-row half">
+                        <div class="gallery-blk">
+                            <a href="../boxproject/img/net1.png" data-lightbox="net" data-title="Killer E2200 Gaming Networking Platform"><img src="../boxproject/img/sized/net1.jpg" /></a>
+                            Killer E2200 Gaming Networking Platform
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="column half">
-                <a id="look" class="anchor"></a>
-                <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
-                <div class="gallery-row half">
-                    <div class="gallery-blk">
-                        <a href="../boxproject/img/looks1.png" data-lightbox="look" data-title="All New Heat Sink Design"><img src="../boxproject/img/sized/looks1.jpg" /></a>
-                        All New Heat Sink Design
+                <div class="column half">
+                    <a id="look" class="anchor"></a>
+                    <h2><span>G1 Looks</span><span class="tri">&nbsp;</span><span class="rect">&nbsp;</span></h2>
+                    <div class="gallery-row half">
+                        <div class="gallery-blk">
+                            <a href="../boxproject/img/looks1.png" data-lightbox="look" data-title="All New Heat Sink Design"><img src="../boxproject/img/sized/looks1.jpg" /></a>
+                            All New Heat Sink Design
+                        </div>
                     </div>
                 </div>
             </div>
