CodeSchool finished lesson 2.3

--- a/js/angular/codeschool/index.html
+++ b/js/angular/codeschool/index.html
@@ -11,6 +11,11 @@
             {{product.name}}
             <em class="pull-right">{{product.price | currency}}</em>
         </h3>
+        <!-- Image Gallery -->
+        <div class="gallery">
+            <img ng-src="{{product.images[0]}}" />
+        </div>
+
     </div>
 </body>
 </html>
