CodeSchool finished lesson 2.5

--- a/js/angular/codeschool/index.html
+++ b/js/angular/codeschool/index.html
@@ -13,7 +13,7 @@
         </h3>
         <!-- Image Gallery -->
         <div class="gallery">
-            <div class="img-wrap">
+            <div class="img-wrap" ng-show="product.images.length">
                 <img ng-src="{{product.images[0]}}" />
             </div>
             <ul class="img-thumbnails clearfix">
