--- a/js/angular/codeschool/index.html
+++ b/js/angular/codeschool/index.html
@@ -41,9 +41,19 @@
                 <h4>Specs</h4>
                 <blockquote>Shine: {{product.shine}}</blockquote>
             </div>
+
+            <!-- Review Tab's Content -->
             <div ng-show="tab.isSet(3)">
-                <h4>Reviews</h4>
-                <blockquote></blockquote>
+                <ul>
+                    <h4>Reviews</h4>
+                    <li ng-repeat="review in product.reviews">
+                        <blockquote>
+                          <strong>{{review.stars}} Stars</strong>
+                          {{review.body}}
+                          <cite class="clearfix">— {{review.author}}</cite>
+                        </blockquote>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
