--- a/js/angular/codeschool/index.html
+++ b/js/angular/codeschool/index.html
@@ -79,7 +79,7 @@
                     <fieldset class="form-group">
                         <input ng-model="review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" />
                     </fieldset>
-                    <fieldset class=form-group>
+                    <fieldset class="form-group">
                         <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
                     </fieldset>
                 </form>
