--- a/js/angular/codeschool/index.html
+++ b/js/angular/codeschool/index.html
@@ -48,9 +48,7 @@
                 <product-description ng-show="tab.isSet(1)"></product-description>
 
                 <!-- Spec Tab's Content -->
-                <div ng-show="tab.isSet(2)">
-                    <h4>Specs</h4>
-                    <blockquote>Shine: {{product.shine}}</blockquote>
+                <div ng-show="tab.isSet(2)" product-specs>
                 </div>
 
                 <!-- Review Tab's Content -->
