--- a/js/angular/codecademy/index.html
+++ b/js/angular/codecademy/index.html
@@ -20,6 +20,8 @@
 
         <h1>{{title}}</h1>
         <h2>{{promo}}</h2>
+        <p class="title">{{product.name}}</p>
+        <p class="price">{{product.price}}</p>
 
       </div>
     </div>
