--- a/js/angular/lynda/index.html
+++ b/js/angular/lynda/index.html
@@ -6,7 +6,21 @@
   <script src="lib/angular/angular.min.js"></script>
 </head>
 <body>
-  <input type="text" ng-model="name">
-  <h2>Welcome {{name}}</h2>
+
+    <div ng-controller = "MyController">
+      <h1>{{author.name}}</h1>
+      <p>{{ author.title + ', ' + author.company }}</p>
+    </div>
+
+<script>
+
+function MyController($scope) {
+  $scope.author = {
+    'name' : 'Emily Serven',
+    'title' : 'Developer',
+    'company' : 'Freelance'
+  }
+}
+</script>
 </body>
 </html>
