--- a/js/angular/chara-select/index.html
+++ b/js/angular/chara-select/index.html
@@ -6,8 +6,6 @@
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-app="charaSelect">
-    <p>
-      {{ "Jello " + "World" }}
-    </p>
+    <chara-display></chara-display>
 </body>
 </html>
