--- a/js/angular/chara-select/chara-display.html
+++ b/js/angular/chara-select/chara-display.html
@@ -1,4 +1,47 @@
-<div ng-repeat="characters in characters.stats">
-    <h2>Name: {{ characters.name }}</h2>
-    <h3>Class: {{ characters.class }}</h3>
+<div class="character-holder" ng-repeat="character in characters.stats">
+    <div class="baseStats">
+
+        <h2>Name: {{ character.name }}</h2>
+        <h3>Class: {{ character.class }}</h3>
+        <p>
+            Alignment: {{ character.alignment }}
+        </p>
+    </div>
+    <div class="equipment">
+        <ul>
+            <li ng-repeat="equip in character.equipment">
+                <b>{{equip.object}}</b>
+            </li>
+        </ul>
+    </div>
+    <div class="stats">
+        <ul>
+            <li>
+                <b>STR:</b> {{character.statsStr}}
+            </li>
+            <li>
+                <b>CON:</b> {{character.statsCon}}
+            </li>
+            <li>
+                <b>DEX:</b> {{character.statsDex}}
+            </li>
+            <li>
+                <b>INT:</b> {{character.statsInt}}
+            </li>
+            <li>
+                <b>WIS:</b> {{character.statsWis}}
+            </li>
+            <li>
+                <b>CHA:</b> {{character.statsCha}}
+            </li>
+        </ul>
+
+    </div>
+    <div class="skills">
+        <ul>
+            <li ng-repeat="skill in character.skills">
+                {{skill}}
+            </li>
+        </ul>
+    </div>
 </div>
