--- a/js/angular/chara-select/index.html
+++ b/js/angular/chara-select/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
     <title>Character Select</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-app="charaSelect">
-    <chara-display></chara-display>
+    <div class="container">
+        <chara-display></chara-display>
+    </div>
 </body>
 </html>
