Added descriptions to JSON and chara-display template.

--- a/js/angular/chara-select/index.html
+++ b/js/angular/chara-select/index.html
@@ -8,8 +8,13 @@
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-app="charaSelect">
+    <!-- Add this functionality? https://github.com/compact/angular-bootstrap-lightbox -->
     <div class="container">
         <chara-display></chara-display>
+        <!-- This display area is the full "character card", ideally only has one character at a given time. probably a lightbox. -->
+        <!-- Need an area that shows only the profiles and names in a grid layout. -->
+        <!-- Add a directive for lightbox content? -->
+        <!-- Bonus Ideas: Button "Add to Team", then calculate total stats. -->
     </div>
 </body>
 </html>
