--- a/js/angular/chara-select/index.html
+++ b/js/angular/chara-select/index.html
@@ -4,11 +4,15 @@
     <title>Character Select</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
+    <script type="text/javascript" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.2.0.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/modal.js"></script>
 </head>
 <body ng-app="charaSelect">
-    <!-- Add this functionality? https://github.com/compact/angular-bootstrap-lightbox -->
+    <!-- Add this functionality? https://angular-ui.github.io/bootstrap/ -->
     <div class="container">
         <chara-display></chara-display>
         <!-- This display area is the full "character card", ideally only has one character at a given time. probably a lightbox. -->
@@ -16,5 +20,50 @@
         <!-- Add a directive for lightbox content? -->
         <!-- Bonus Ideas: Button "Add to Team", then calculate total stats. -->
     </div>
+
+  <div ng-controller="ModalDemoCtrl as $ctrl" class="modal-demo">
+      <script type="text/ng-template" id="myModalContent.html">
+          <div class="modal-header">
+              <h3 class="modal-title" id="modal-title">I'm a modal!</h3>
+          </div>
+          <div class="modal-body" id="modal-body">
+              <ul>
+                  <li ng-repeat="item in $ctrl.items">
+                      <a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>
+                  </li>
+              </ul>
+              Selected: <b>{{ $ctrl.selected.item }}</b>
+          </div>
+          <div class="modal-footer">
+              <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
+              <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
+          </div>
+      </script>
+      <script type="text/ng-template" id="stackedModal.html">
+          <div class="modal-header">
+              <h3 class="modal-title" id="modal-title-{{name}}">The {{name}} modal!</h3>
+          </div>
+          <div class="modal-body" id="modal-body-{{name}}">
+              Having multiple modals open at once is probably bad UX but it's technically possible.
+          </div>
+      </script>
+
+      <button type="button" class="btn btn-default" ng-click="$ctrl.open()">Open me!</button>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.open('lg')">Large modal</button>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.open('sm')">Small modal</button>
+      <button type="button"
+          class="btn btn-default"
+          ng-click="$ctrl.open('sm', '.modal-parent')">
+              Modal appended to a custom parent
+      </button>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.toggleAnimation()">Toggle Animation ({{ $ctrl.animationsEnabled }})</button>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.openComponentModal()">Open a component modal!</button>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.openMultipleModals()">
+          Open multiple modals at once
+      </button>
+      <div ng-show="$ctrl.selected">Selection from a modal: {{ $ctrl.selected }}</div>
+      <div class="modal-parent">
+      </div>
+  </div>
 </body>
 </html>
