Modularized and refactored code, more custom directives.

--- a/js/angular/chara-select/index.html
+++ b/js/angular/chara-select/index.html
@@ -14,6 +14,8 @@
 <body ng-app="charaSelect">
     <!-- Add this functionality? https://angular-ui.github.io/bootstrap/ -->
     <div class="container">
+        <team-current></team-current>
+        <chara-boxes></chara-boxes>
         <chara-display></chara-display>
         <!-- This display area is the full "character card", ideally only has one character at a given time. probably a lightbox. -->
         <!-- Need an area that shows only the profiles and names in a grid layout. -->
