--- a/vr/aframe-test/index4.html
+++ b/vr/aframe-test/index4.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <script>
-      AFRAME.registerComponent('hello-world', {
+      AFRAME.registerComponent('log', {
+        schema: {
+          message: {type: 'string', default: 'Hello, World!'}
+        },
         init: function() {
-            console.log('Hello, World!');
+            console.log(this.data.message);
         }
       });
     </script>
@@ -19,7 +22,7 @@
       <a-assets>
         <img id="skyTexture" src="img/streetsky.jpg">
       </a-assets>
-      <a-box position="0 2 -5" rotation="0 45 45" scale="2 2 2" color="#A8C5F6"vsrc="#boxTexture" hello-world>
+      <a-box position="0 2 -5" rotation="0 45 45" scale="2 2 2" color="#A8C5F6"vsrc="#boxTexture" log="message: Here come dat boi">
         <a-animation attribute="position" direction="alternate" dur="2000" repeat="indefinite"
           to="0 2.2 -5"></a-animation>
           <!--
