--- a/vr/aframe-test/index7.html
+++ b/vr/aframe-test/index7.html
@@ -13,6 +13,17 @@
         <a-mixin id="cubewall" geometry="primitive: box; depth: 1.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
         <a-mixin id="wallhalf" geometry="depth: .44; height: 1.5; width: 0.10"></a-mixin>
       </a-assets>
+      <!-- B1 -->
+      <a-entity mixin="cubewall" position="-3.80 0.75 0.15" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall" position="-3.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="-3.63 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="-2.57 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <!-- B2 -->
+      <a-entity mixin="cubewall" position="-2.30 0.75 0.15" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall" position="-1.60 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="-2.13 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="-1.07 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <!-- MAIN cubicle (B3) -->
       <a-entity mixin="cubewall" position="-0.80 0.75 0.15" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall" position="0.6 0.75 0.15" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall" position="-0.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
