Full cubicle row wow

--- a/vr/aframe-test/index7.html
+++ b/vr/aframe-test/index7.html
@@ -29,6 +29,16 @@
       <a-entity mixin="cubewall" position="-0.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-0.63 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="0.43 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <!-- B4 -->
+      <a-entity mixin="cubewall" position="2.10 0.75 0.15" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall" position="1.40 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="1.93 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="0.87 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <!-- B5 -->
+      <a-entity mixin="cubewall" position="3.60 0.75 0.15" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall" position="2.90 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="3.43 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubewall wallhalf" position="2.37 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-sky src="#vrbg" repeat="100"></a-sky>
     </a-scene>
   </body>
