--- a/vr/aframe-test/index7.html
+++ b/vr/aframe-test/index7.html
@@ -9,9 +9,15 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="vrbg" src="../img/bg.png">
-        <a-mixin id="cubewall" geometry="primitive: box; depth: 1.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
-        <a-mixin id="wallhalf" geometry="depth: .44; height: 1.5; width: 0.10"></a-mixin>
+        <img id="vrbg" src="img/bg.png">
+        <img id="carpet" src="img/carpet.jpg">
+        <img id="cube" src="img/cube.jpg">
+        <img id="wall" src="img/wall.jpg">
+        <img id="ceiling" src="img/ceiling.png">
+        <a-mixin id="cubewall" material="src: #cube" geometry="primitive: box; depth: 1.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
+        <a-mixin id="cubelongwall" material="src: #cube" geometry="primitive: box; depth: 7.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
+        <a-mixin id="cubebigwall" geometry="primitive: box; depth: 15; height: 4; width: 0.10; color: #aaaaaa"></a-mixin>
+        <a-mixin id="wallhalf" src="#cube" geometry="depth: .44; height: 1.5; width: 0.10"></a-mixin>
       </a-assets>
       <!-- A1 -->
       <a-entity mixin="cubewall" position="-3.80 0.75 1.75" material="" scale="" visible=""></a-entity>
@@ -36,30 +42,30 @@
       <a-entity mixin="cubewall wallhalf" position="2.37 0.75 2.55" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <!-- B1 -->
       <a-entity mixin="cubewall" position="-3.80 0.75 0.15" material="" scale="" visible=""></a-entity>
-      <a-entity mixin="cubewall" position="-3.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-3.63 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-2.57 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <!-- B2 -->
       <a-entity mixin="cubewall" position="-2.30 0.75 0.15" material="" scale="" visible=""></a-entity>
-      <a-entity mixin="cubewall" position="-1.60 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-2.13 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-1.07 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <!-- MAIN cubicle (B3) -->
       <a-entity mixin="cubewall" position="-0.80 0.75 0.15" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall" position="0.6 0.75 0.15" material="" scale="" visible=""></a-entity>
-      <a-entity mixin="cubewall" position="-0.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="-0.63 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="0.43 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <!-- B4 -->
       <a-entity mixin="cubewall" position="2.10 0.75 0.15" material="" scale="" visible=""></a-entity>
-      <a-entity mixin="cubewall" position="1.40 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="1.93 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="0.87 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <!-- B5 -->
       <a-entity mixin="cubewall" position="3.60 0.75 0.15" material="" scale="" visible=""></a-entity>
-      <a-entity mixin="cubewall" position="2.90 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+      <a-entity mixin="cubelongwall" position="-0.10 0.75 0.95" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="3.43 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="2.37 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
+
+      <a-plane material="src: #carpet; repeat: 20 20" rotation="-90 0 0" width="30" height="30" color="#888888" repeat="20 20"></a-plane>
+      <a-entity material="src: #ceiling; repeat: 15 15" geometry="primitive:box; depth: 30; height: 30; width: 0.10" rotation="0 0 90" position="0 4 0" color="#888888"></a-entity>
+      <a-entity mixin="cubebigwall" position="0 2 -3" rotation="0 90 0" material="src: #wall; repeat: 8 5" scale="" visible=""></a-entity>
       <a-sky src="#vrbg" repeat="100"></a-sky>
     </a-scene>
   </body>
