--- a/vr/aframe-test/index7.html
+++ b/vr/aframe-test/index7.html
@@ -5,6 +5,7 @@
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
     <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+    <script src="TGALoader.js"></script>
   </head>
   <body>
     <a-scene>
@@ -12,11 +13,17 @@
         <img id="vrbg" src="img/bg.png">
         <img id="carpet" src="img/carpet.jpg">
         <img id="cube" src="img/cube.jpg">
+        <img id="sky" src="img/sky.png">
         <img id="wall" src="img/wall.jpg">
         <img id="ceiling" src="img/ceiling.png">
+        <a-asset-item id="potato-obj" src="img/potatoes.obj"></a-asset-item>
+        <a-asset-item id="potato-mtl" src="img/potatoes.mtl"></a-asset-item>
         <a-mixin id="cubewall" material="src: #cube" geometry="primitive: box; depth: 1.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
         <a-mixin id="cubelongwall" material="src: #cube" geometry="primitive: box; depth: 7.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
         <a-mixin id="cubebigwall" geometry="primitive: box; depth: 15; height: 4; width: 0.10; color: #aaaaaa"></a-mixin>
+        <a-mixin id="cubebigshortwallA" geometry="primitive: box; depth: 15; height: 1; width: 0.10; color: #aaaaaa"></a-mixin>
+        <a-mixin id="cubebigshortwallB" geometry="primitive: box; depth: 15; height: 2.5; width: 0.10; color: #aaaaaa"></a-mixin>
+        <a-mixin id="cubebigshortwallC" geometry="primitive: box; depth: 15; height: 1.5; width: 0.10; color: #aaaaaa"></a-mixin>
         <a-mixin id="wallhalf" src="#cube" geometry="depth: .44; height: 1.5; width: 0.10"></a-mixin>
       </a-assets>
       <!-- A1 -->
@@ -63,10 +70,16 @@
       <a-entity mixin="cubewall wallhalf" position="3.43 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
       <a-entity mixin="cubewall wallhalf" position="2.37 0.75 -0.65" rotation="0 90 0" material="" scale="" visible=""></a-entity>
 
-      <a-plane material="src: #carpet; repeat: 20 20" rotation="-90 0 0" width="30" height="30" color="#888888" repeat="20 20"></a-plane>
-      <a-entity material="src: #ceiling; repeat: 15 15" geometry="primitive:box; depth: 30; height: 30; width: 0.10" rotation="0 0 90" position="0 4 0" color="#888888"></a-entity>
+      <a-entity obj-model="obj: #potato-obj; mtl: #potato-mtl" position="-.5 0 .75" rotation="0 90 0" scale="0.01 0.01 0.01"></a-entity>
+
+      <a-plane material="src: #carpet; repeat: 20 20" rotation="-90 0 0" width="15.2" height="8" color="#888888" repeat="20 20" position="0 0 1.04"></a-plane>
+      <a-entity material="src: #ceiling; repeat: 10 10" geometry="primitive:box; depth: 8; height: 15.20; width: 0.10" rotation="0 0 90" position="0 4 1.02" color="#888888"></a-entity>
       <a-entity mixin="cubebigwall" position="0 2 -3" rotation="0 90 0" material="src: #wall; repeat: 8 5" scale="" visible=""></a-entity>
-      <a-sky src="#vrbg" repeat="100"></a-sky>
+      <a-entity mixin="cubebigshortwallC" position="0 .5 5" rotation="0 90 0" material="src: #wall; repeat: 8 5" scale="" visible=""></a-entity>
+      <a-entity mixin="cubebigshortwallA" position="0 3.5 5" rotation="0 90 0" material="src: #wall; repeat: 8 5" scale="" visible=""></a-entity>
+      <a-entity mixin="cubebigshortwallB" position="0 2.4 5" rotation="0 90 0" material="src: #wall; repeat: 8 5; opacity: .5" scale="" visible=""></a-entity>
+      <a-entity mixin="cubebigwall" position="7 2 -2.45" rotation="0 0 0" material="src: #wall; repeat: 8 5" scale="" visible=""></a-entity>
+      <a-sky src="#sky"></a-sky>
     </a-scene>
   </body>
 </html>
